# binance-futures-trading-bot

./: .gitignore  Leverage & margin change.py  binance_client.py  customized.py  main.py  notifications.py  pyproject.toml  telegram.py  timer.py
