[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
pyTelegramBotAPI = "^4.7.1"
pandas = "^1.5.1"
binance = "^0.3"
python-dotenv = "^0.21.0"
python-binance = "^1.0.16"
ta-lib-bin = "^0.4.26"
notification = "^0.2.1"
talib-binary = "^0.4.19"
telebot = "^0.0.4"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"